another html fix

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ Rede de Usuário de Dados
 <ul>
 <li>Addin Excel.</li>
 <li>Addin Google Driver.</li>
-<li>Client Python.</li>
-<li>Client R.</li>
+<li>Cliente Python.</li>
+<li>Cliente R.</li>
 <li>Etc.</li>
 
 </ul></li>
@@ -221,8 +221,9 @@ Rede de Usuário de Dados
 <ul>
 <li>100% Cloudbased.</li>
 <li>Modelo de subscrição de bases curadas por parceiros.</li>
+<li>Utilizado para backtests de modelos quant.</li>
 <li><p>
-Utilizado para backtests de modelos quant. Algum tipo de crowdsourcing.
+Algum tipo de crowdsourcing.
 </p>
 
 </section>
